--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Movie</string>
+    <string name="home">홈</string>
+    <string name="mypage">마이페이지</string>
 </resources>
