MotionLayout 을 이용한 MovieDetailFragment 구현

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="home">홈</string>
     <string name="mypage">마이페이지</string>
     <string name="no_information">정보 없음</string>
+    <string name="none">모름</string>
 </resources>
