Firebase Auth 를 통한 회원가입 및 로그인 처리 완료. (구조적으로 마이페이지 진입시 로그인이 안되있다면 로그인페이지로 나오게끔 추후 변경)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="mypage">마이페이지</string>
     <string name="no_information">정보 없음</string>
     <string name="none">모름</string>
+    <string name="hint_id">아이디를 입력해주세요.</string>
+    <string name="hint_password">비밀번호를 입력해주세요.</string>
+    <string name="signUp">회원가입</string>
+    <string name="login">로그인</string>
 </resources>
