Facebook SNS 로그인 구현 (추후 BottomSheet 로 변경 로직 추가)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="hint_password">비밀번호를 입력해주세요.</string>
     <string name="signUp">회원가입</string>
     <string name="login">로그인</string>
+    <string name="facebook_app_id">442578150996511</string> <string name="fb_login_protocol_scheme">fb442578150996511</string>
 </resources>
